# Radiance

./: .gitignore  Cargo.toml  README.md
src/: core.rs  language_model.rs  main.rs
src/core/: attention.rs  demo.rs  dense.rs  embedding.rs  mod.rs  operations.rs  optimization.rs  serialization.rs
