[package]
name = "radiance"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5"
chrono = "*"
lazy_static = "*"
ndarray = {version = "0.16", features = ["approx"]} 
ndarray-rand = "0.15"
# just hosting a fork is easier than figuring out how to tell Cargo what version to use
ndarray-npy = { git = "https://github.com/zackmdavis/ndarray-npy", branch = "ndarray-0.16" }
num-traits = "*"
rand = "*"
rand_distr = "0.4.3"
topological-sort = "*"

[profile.release]
debug = true
